tests/cmd_set_bad.out
./cmd_set_bad.svx:5:7: error: Expecting numeric field, found " reference"
 *fix^1 reference^0^0^0 ; error
       ^~~~~~~~~~
./cmd_set_bad.svx:11:1: error: End of line not blank
 ; comment ; error
 ^~~~~~~~~~~~~~~~~
./cmd_set_bad.svx:13:1: error: End of line not blank
 *end ; error
 ^~~~~~~~~~~~
./cmd_set_bad.svx:20:21: error: Expecting numeric field, found ".0"
 *fix+(2)+reference+1.0+2/0+3 ; error
                     ^~
./cmd_set_bad.svx:22:18: error: Expecting numeric field, found "+1.0"
 *fix&3&reference&+1.0&2&3 ; error
                  ^~~~
./cmd_set_bad.svx:28:12: error: Character "." not allowed in station name (use *SET NAMES to set allowed characters)
 *equate foo.1 1 ; error
            ^
./cmd_set_bad.svx:31:9: error: Expecting numeric field, found "-"
 1 2 100 - down ; error
         ^
./cmd_set_bad.svx:34:6: error: Unknown character class "FormFeed"
 *set FormFeed = ; error
      ^~~~~~~~
./cmd_set_bad.svx:35:6: warning: ROOT is deprecated
 *set ROOT $
      ^~~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
./cmd_set_bad.svx:30: warning: Station "bar.1" referred to by *export but never used
   1 0-node.
There were 2 warning(s) and 8 error(s) - no output files produced.
